<resources>
    <string name="app_name">  Meet:Day</string>
    <!--Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_find_meeting">Find meeting</string>
    <string name="drawer_create_meeting">New meeting</string>
    <string name="drawer_settings">Settings</string>

    <string name="not_logged_in">You\'re not logged in.</string>


    <!-- Drawer menu -->
    <string-array name="menu_items">
        <item>@string/drawer_find_meeting</item>
        <item>@string/drawer_create_meeting</item>
        <item>@string/drawer_settings</item>
    </string-array>

    <!--global menu-->
    <string name="global_about">About</string>
    <string name="global_exit">Exit</string>

    <!--Exit dialog-->
    <string name="exit_confirmation">Exit confirmation</string>
    <string name="exit_question">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--About dialog-->
    <string name="about_toast">
        Laboratory work #3\n
        Author: Ekaterina Skoryupina\n
        Group: 622M\n
        University: SSAU\n</string>

    <!--ActionBar button-->
    <string name="action_help">Help</string>
    <string name="action_add_meeting">Add</string>
    <string name="action_category">Category</string>



    <!--REST server extra texts-->
    <string name="rest_login_or_password_error">Login or password is incorrect, or an error on the server occurred.</string>
    <string name="rest_server_not_available">The server is not available: Timeout</string>
    <string name="data_not_found">Data not found.</string>
    <string name="result">result</string>
    <string name="app_full_name">com.github.skoryupina.meetingscheduler</string>
    <string name="notif_new_meetings_received">New meetings were received.</string>
    <string name="started_from_notif">isStartedFromNotification</string>


    <!--url for requests-->

    <!--http://192.168.43.18:-->
    <string name="url_request_meeting">http://192.168.1.43:8080/schedulerback/getTodayMeetings</string>
    <string name="url_cancel_meeting">http://192.168.1.43:8080/schedulerback/cancelMeeting</string>
    <string name="url_get_details">http://192.168.1.43:8080/schedulerback/getDescription</string>
    <string name="url_add_participant">http://192.168.1.43:8080/schedulerback/addParticipant</string>
    <string name="url_get_meeting_by_description">http://192.168.1.43:8080/schedulerback/getMeetingByDescription</string>
    <string name="url_add_meeting">http://192.168.1.43:8080/schedulerback/androidCreateMeeting</string>

    <!--Background Error-->
    <string name="intent_name">android.intent.action.MAIN</string>
    <string name="intent_received_msg">Received</string>
    <string name="intent_msg_tag">msg</string>

    <!--Shared preferences-->
    <string name="shared_preferenced_name">"com.github.skoryupina.meetingscheduler_preferences"</string>

    <!-- Menu options -->
    <string name="action_add">New meeting</string>
    <string name="action_search">Search by description</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="description">Meeting description</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="quit">Quit or not: you decide</string>
    <string name="really_quit">Do you really want to quit?</string>
    <string name="ok">OK</string>


    <!-- Settings activity-->
    <string name="login_title">Log in</string>
    <string name="enter_login_message">Enter login and password given by administrator</string>
    <string name="login_field">Login: </string>
    <string name="password_field">Password:</string>
    <string name="result_of_login">Please log in</string>
    <string name="auth_request">Log in the app. Authorization required.</string>

    <!-- Checking internet connection -->
    <string name="no_internet_connection">Check internet connection, please.</string>



    <string name="desc_title">Search by description</string>
    <string name="input_descrip">Input description</string>


    <string name="pref_category">Account settings</string>

    <string name="participant_add_message">Participant added.</string>
    <string name="iconContentDescription">Icon for delete</string>
    <string name="iconListContent">Icon for list item</string>
    <string name="iconPriorityContent">Icon for priority</string>

    <string name="meetingTextView">meetingName</string>
    <string name="beginDateText">beginDate</string>
    <string name="endDateText">endDate</string>

    <string name="unauthorized">[{\"response\":\"false\"}]</string>


    <string name="menu_add">Enroll</string>
    <string name="menu_info">Details</string>

    <string name="fio">FIO</string>
    <string name="position">Position</string>
    <string name="participantText">Input data:</string>
    <string name="participantTitle">Enroll</string>
    <string name="start_date_field">Start date:</string>
    <string name="end_date_field">End date.:</string>
    <string name="text_start_time">Start time:</string>
    <string name="text_end_time">End time:</string>


    <string name="new_meeting">New meeting</string>
    <string name="meeting_name">Name:</string>
    <string name="meeting_description">Description: </string>
    <string name="meeting_participants">Participants: </string>
    <string name="priority">Priority:</string>
    <string name="priority_urgent">URGENT</string>
    <string name="priority_optional">OPTIONAL</string>
    <string name="priority_planned">PLANNED</string>


    <string name="delete_message">Meeting cancelled.</string>
    <string name="add_message">Meeting added.</string>
</resources>
