<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etMeetingName"
                    android:layout_gravity="center_horizontal"
                    android:inputType="text"
                    android:textStyle="italic"
                    android:hint="@string/meeting_name"
                    android:paddingRight="?android:attr/listPreferredItemPaddingRight" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:hint="@string/meeting_description"
                    android:textStyle="italic"
                    android:id="@+id/etDescription"
                    android:paddingRight="?android:attr/listPreferredItemPaddingRight" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/start_date_field"
                    android:ems="10"
                    android:id="@+id/startDatePickerText"
                    android:paddingRight="?android:attr/listPreferredItemPaddingRight"
                    android:text=""
                    android:textSize="17sp"
                    android:layout_marginTop="5dp"
                    android:textIsSelectable="false"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:hint="@string/text_start_time"
                    android:id="@+id/beginTimeText"
                    android:textSize="17sp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:hint="@string/end_date_field"
                    android:id="@+id/endDatePickerText"
                    android:paddingRight="?android:attr/listPreferredItemPaddingRight"
                    android:text=""
                    android:textSize="17sp"
                    android:editable="false"
                    android:layout_alignParentBottom="false"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:hint="@string/text_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/endTimeText"
                    android:textSize="17sp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioPriority"
                    android:layout_centerInParent="true">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priority_urgent"
                        android:id="@+id/urgentRadio"
                        android:textColor="#d00e10"
                        android:checked="true"
                        android:singleLine="false" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priority_planned"
                        android:id="@+id/routineRadio"
                        android:textColor="#359439"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priority_optional"
                        android:id="@+id/possibleRadio"
                        android:textColor="#ffa913"/>
                </RadioGroup>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>